--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/kevin-salamon/Maureen-Portfolio#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "express-validator": "^6.4.1"
+    "nodemailer": "^6.4.6"
   }
 }
