--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "homepage": "https://github.com/kevin-salamon/Maureen-Portfolio#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemailer": "^6.4.6"
   },
   "engines": {
     "node": "10.16.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
